added answers to the questions

--- a/report.html
+++ b/report.html
@@ -12773,7 +12773,8 @@ Five most frequently appearing tokenized words in the training set are :
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p><strong>Answer:</strong></p>
+<p><strong>Answer:</strong><br>
+These methods make the embedding of same size by padding 0 in the vector representation.</p>
 
 </div>
 </div>
@@ -17429,7 +17430,10 @@ Billable seconds: 617</p>
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p><strong>Answer:</strong></p>
+<p><strong>Answer:</strong><br>
+This XGBoost model has better accuracy.
+Actually XGBoost uses the boosting technique which provides extra accuracy gain of 3-4% .
+XGBoost is better for sentiment analysis because of better accuracy provided.</p>
 
 </div>
 </div>
@@ -17889,7 +17893,9 @@ Starting  neg  files</p>
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p><strong>Answer:</strong></p>
+<p><strong>Answer:</strong><br>
+eg : <code>This movie is great.</code>
+predicted sentiment : <code>positive</code></p>
 
 </div>
 </div>
